change background colors for better readability during bug fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,12 @@
+body {
+  background-color: #ef00ef;
+}
+
+
 .quiz {
   display: none;
 }
 
 .aries {
-  display: none;
-  background: rgb(209,92,18);
-  background: linear-gradient(0deg, rgba(209,92,18,1) 0%, rgba(238,161,41,1) 100%); 
+  background-color: #ef0000
 }
